<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
        
    <PreferenceCategory 
        android:title="@string/location_preference_category_title" >
        
	     <com.urbanairship.richpush.sample.preference.LocationEnablePreference
	        android:persistent="false"
	        android:key="location_preference"
	        android:title="@string/location_preference_title" />
	    
	    <com.urbanairship.richpush.sample.preference.LocationForegroundEnablePreference
	        android:persistent="false"
	        android:dependency="location_preference"
	        android:key="foreground_location_preference"
	        android:title="@string/foreground_location_preference_title" />
	    
	    <com.urbanairship.richpush.sample.preference.LocationBackgroundEnablePreference
	        android:persistent="false"
	        android:dependency="location_preference"
	        android:key="background_location_preference"
	        android:title="@string/background_location_preference_title" />
    
    </PreferenceCategory>
    

</PreferenceScreen>